Fix letter-spacing on h5
Due to an oversight, letter-spacing was incorrectly rendered at 1px.
Change letter-spacing on the h5 row headers to 0.

--- a/comparisontool/static/comparisontool/css/comparison-tool.css
+++ b/comparisontool/static/comparisontool/css/comparison-tool.css
@@ -941,6 +941,7 @@ This contains the majority of the structural styles for table-based elements.
     padding: 0;
     border: 0;
     line-height: 1.5;
+    letter-spacing: 0;
 }
 
 .grants h6, .federal h6, .private h6, .contributions h6 {
